tests/language_modules/08_routines/invalid_semantics/function_return_type_mismatch.vf
module FunctionReturnTypeMismatch

function read() returns Integer
is
    return true
end read

end FunctionReturnTypeMismatch